--- a/bretts-portfolio/src/Css/Navbar.css
+++ b/bretts-portfolio/src/Css/Navbar.css
@@ -55,7 +55,6 @@
 
 .resume-btn {
   letter-spacing: 1px;
-  width: 150x;
   font-family: "Rubik";
   font-size: 17px;
   font-weight: 500;
@@ -68,6 +67,29 @@
   outline: none;
   box-shadow: inset 0 0 0 0 #0a192f;
   transition: 0.3s ease-out;
+}
+
+.resume-hamburger-btn {
+  margin-top: 3rem;
+  letter-spacing: 1px;
+  width: 150px;
+  font-family: "Rubik";
+  font-size: 17px;
+  font-weight: 500;
+  padding: 1.2rem 2.4rem;
+  border-radius: 1rem;
+  background-color: #0a192f;
+  border: 1px solid #64ffda;
+  color: #64ffda;
+  cursor: pointer;
+  outline: none;
+  box-shadow: inset 0 0 0 0 #0a192f;
+  transition: 0.3s ease-out;
+}
+
+.resume-hamburger-btn:hover {
+  box-shadow: inset 150px 0 0 #64ffda;
+  color: #0a192f;
 }
 
 .resume-btn:hover {
@@ -170,6 +192,7 @@
   align-items: center;
   justify-content: center;
 }
+
 .menu-wrap .menu > div {
   background: rgb(10, 25, 47, 0.85);
   border-radius: 50%;
@@ -201,7 +224,7 @@
 
 .menu-wrap .menu > div > div > ul > li:hover {
   color: #64ffda;
-  font-size: 32px;
+  font-size: 30px;
 }
 
 .menu-wrap .menu > div > div > ul > li > a {
