--- a/bretts-portfolio/src/Css/Navbar.css
+++ b/bretts-portfolio/src/Css/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: #0a192f;
+  background: #03050a;
   width: 100%;
   height: auto;
   padding: 20px;
@@ -99,7 +99,7 @@
 
 .menu-wrap {
   display: flex;
-  z-index: 1;
+  z-index: 5;
   overflow: hidden;
   display: none;
 }
