--- a/bretts-portfolio/src/Css/Hero.css
+++ b/bretts-portfolio/src/Css/Hero.css
@@ -26,10 +26,12 @@
   justify-content: center;
   font-size: 4rem;
   margin-bottom: 20rem;
-  color: #64ffda;
+  color: #fff;
   z-index: 15;
 }
 
 .text p {
+  font-size: 3rem;
+  color: #64ffda;
   margin-bottom: 24px;
 }
