finished most of footer all i need is to connect to smooth scroll when I implement that

--- a/bretts-portfolio/src/App.css
+++ b/bretts-portfolio/src/App.css
@@ -16,10 +16,10 @@ html {
 }
 
 body {
-  background: #a8b2d1;
+  background: #03050a;
   font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
-  color: #023047;
+  color: #ccd6f6;
   overflow-x: hidden;
 }
