--- a/bretts-portfolio/src/Css/Hero.css
+++ b/bretts-portfolio/src/Css/Hero.css
@@ -1,8 +1,8 @@
 .hero {
-  position: absolute;
+  position: relative;
   right: 0;
   width: 100%;
-  min-height: 100vh;
+  min-height: 80vh;
   padding: 100px;
   display: flex;
   justify-content: center;
@@ -15,18 +15,19 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 80vh;
   object-fit: cover;
   opacity: 0.8;
 }
 
 .text {
+  margin-top: 10rem;
   text-align: center;
   justify-content: center;
   font-size: 4rem;
   margin-bottom: 20rem;
-  color: #fff;
+  color: #ccd6f6;
   z-index: 15;
 }
 
