--- a/bretts-portfolio/src/Css/Hero.css
+++ b/bretts-portfolio/src/Css/Hero.css
@@ -2,12 +2,12 @@
   position: relative;
   right: 0;
   width: 100%;
-  min-height: 80vh;
+  min-height: 65vh;
   padding: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #0a192f;
+  background: black;
   z-index: 2;
 }
 
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 80vh;
+  height: 90vh;
   object-fit: cover;
   opacity: 0.8;
 }
@@ -35,4 +35,10 @@
   font-size: 3rem;
   color: #64ffda;
   margin-bottom: 24px;
+  margin-top: 2rem;
+}
+
+.text div {
+  margin-top: 2rem;
+  color: #64ffda;
 }
