--- a/bretts-portfolio/src/Css/Navbar.css
+++ b/bretts-portfolio/src/Css/Navbar.css
@@ -35,7 +35,7 @@
   display: flex;
   color: #ccd6f6;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 2.5rem;
   transition: all 0.3s;
 }
 
@@ -46,7 +46,7 @@
 
 .nav-link:hover {
   color: #64ffda;
-  font-size: 20px;
+  font-size: 3rem;
 }
 
 .nav-link:hover p {
