--- a/bretts-portfolio/src/Css/Projects.css
+++ b/bretts-portfolio/src/Css/Projects.css
@@ -1,5 +1,5 @@
 .project-section {
-  background: black;
+  background: #0a192f;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,4 +12,9 @@
   margin-top: 3rem;
   display: flex;
   gap: 3rem;
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
 }
