--- a/bretts-portfolio/src/Css/Projects.css
+++ b/bretts-portfolio/src/Css/Projects.css
@@ -1,11 +1,11 @@
 .project-section {
-  background: #0a192f;
+  background: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #a8b2d1;
-  height: 80vh;
+  height: 90vh;
 }
 
 .card-section {
@@ -16,5 +16,5 @@
 
 h1 {
   font-size: 3rem;
-  margin-bottom: 2rem;
+  margin-bottom: 5rem;
 }
