--- a/bretts-portfolio/src/Css/Skills.css
+++ b/bretts-portfolio/src/Css/Skills.css
@@ -1,13 +1,12 @@
 .skills-section {
-  margin-top: 2rem;
-  background: black;
+  background: #0a192f;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #a8b2d1;
   font-size: 2rem;
-  height: 30vh;
+  height: 45vh;
 }
 
 .skill-header {
@@ -37,4 +36,43 @@ ul li:hover {
   transform: translateY(-0.4rem);
   color: #64ffda;
   transition: ease-in 0.2s;
+}
+
+.wave1 {
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.wave1 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 55px;
+}
+
+.wave1 .shape-fill {
+  fill: #0a192f;
+}
+
+.wave2 {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.wave2 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 55px;
+}
+
+.wave2 .shape-fill {
+  fill: #0a192f;
 }
