--- a/bretts-portfolio/src/Css/Skills.css
+++ b/bretts-portfolio/src/Css/Skills.css
@@ -76,3 +76,20 @@ ul li:hover {
 .wave2 .shape-fill {
   fill: #0a192f;
 }
+
+@media (max-width: 820px) {
+  ul {
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+  }
+
+  ul li {
+    cursor: pointer;
+    font-size: 6rem;
+    list-style: none;
+    transition: all 0.3s;
+  }
+}
