--- a/bretts-portfolio/src/Css/About.css
+++ b/bretts-portfolio/src/Css/About.css
@@ -7,10 +7,12 @@
   color: #a8b2d1;
   height: 90%;
   width: 100%;
+  margin-top: 6rem;
+  margin-bottom: 4rem;
 }
 
 .about-me h1 {
-  margin-top: 1rem;
+  margin-top: 3rem;
   font-size: 3rem;
   color: #64ffda;
   z-index: 5;
@@ -42,5 +44,24 @@
   filter: grayscale(0%);
 }
 
-@media (max-width: 820px) {
+@media (max-width: 950px) {
+  .about-me p {
+    margin-top: 2rem;
+    font-size: 20px;
+    width: 70vw;
+    line-height: 3rem;
+    letter-spacing: 1px;
+    z-index: 5;
+  }
+}
+
+@media (max-width: 415px) {
+  .about-me p {
+    margin-top: 1rem;
+    font-size: 18px;
+    width: 80vw;
+    line-height: 2.5rem;
+    letter-spacing: 0.5px;
+    z-index: 5;
+  }
 }
