--- a/bretts-portfolio/src/Css/Card.css
+++ b/bretts-portfolio/src/Css/Card.css
@@ -12,6 +12,9 @@
   text-align: center;
   transition: all 0.4s ease-in-out;
   cursor: pointer;
+  z-index: 50;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .card:hover {
@@ -71,4 +74,23 @@
 .link:hover {
   color: #64ffda;
   transition: all 0.2s ease-in-out;
+}
+
+.card {
+  width: fit-content;
+  display: grid;
+  grid-template-columns: 300px;
+  grid-template-rows: 210px 210px 80px;
+  grid-template-areas: "image" "text" "links";
+  border-radius: 18px;
+  border: solid 2px #64ffda;
+  background: #0a192f;
+  color: #a8b2d1;
+  box-shadow: 5px 5px 15px rgba(10, 25, 47, 0.7);
+  text-align: center;
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+  z-index: 50;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
