--- a/bretts-portfolio/src/Css/Footer.css
+++ b/bretts-portfolio/src/Css/Footer.css
@@ -26,8 +26,8 @@ footer {
   align-items: center;
   position: relative;
   background: #0a192f;
-  height: 45vh;
-  width: 100vw;
+  height: 45%;
+  width: 100%;
 }
 
 .footer-text {
@@ -93,4 +93,14 @@ footer {
   transform: translateY(-0.6rem);
   color: #64ffda;
   transition: ease-in 0.2s;
+}
+
+@media (max-width: 450px) {
+  .email {
+    color: #a8b2d1;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 2rem;
+    transition: all 0.3s;
+  }
 }
