--- a/bretts-portfolio/src/Css/Skills.css
+++ b/bretts-portfolio/src/Css/Skills.css
@@ -6,10 +6,12 @@
   align-items: center;
   color: #a8b2d1;
   font-size: 2rem;
-  height: 45vh;
+  height: 40%;
+  width: 100%;
 }
 
 .skill-header {
+  margin-top: 4rem;
   margin-bottom: 4rem;
 }
 
@@ -30,6 +32,7 @@ ul li {
   font-size: 6rem;
   list-style: none;
   transition: all 0.3s;
+  margin-bottom: 3rem;
 }
 
 ul li:hover {
@@ -77,7 +80,7 @@ ul li:hover {
   fill: #0a192f;
 }
 
-@media (max-width: 820px) {
+@media (max-width: 950px) {
   ul {
     margin-top: 4rem;
     display: flex;
@@ -91,5 +94,30 @@ ul li:hover {
     font-size: 6rem;
     list-style: none;
     transition: all 0.3s;
+  }
+}
+.subtext {
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 700px) {
+  ul {
+    margin-top: 4rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+  }
+
+  ul li {
+    cursor: pointer;
+    font-size: 6rem;
+    list-style: none;
+    transition: all 0.3s;
+  }
+  .subtext {
+    width: 85%;
   }
 }
