--- a/bretts-portfolio/src/Css/Footer.css
+++ b/bretts-portfolio/src/Css/Footer.css
@@ -83,7 +83,8 @@ footer {
   align-items: center;
   cursor: pointer;
   text-decoration: none;
-  margin-top: 3rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
   font-size: 6rem;
   list-style: none;
   transition: all 0.3s;
