--- a/bretts-portfolio/src/Css/Navbar.css
+++ b/bretts-portfolio/src/Css/Navbar.css
@@ -1,8 +1,10 @@
 .navbar {
-  background: black;
-  width: 100%;
+  background: linear-gradient(rgb(10, 25, 47) 80%, transparent);
+  width: 99%;
   height: auto;
   padding: 20px;
+  position: fixed;
+  z-index: 999;
 }
 
 .navbar-container {
