--- a/bretts-portfolio/src/Css/About.css
+++ b/bretts-portfolio/src/Css/About.css
@@ -12,7 +12,8 @@
 }
 
 .about-me h1 {
-  margin-top: 15rem;
+  margin-top: 17rem;
+  margin-bottom: 5rem;
   font-size: 3rem;
   color: #64ffda;
   z-index: 5;
