--- a/bretts-portfolio/src/Css/Card.css
+++ b/bretts-portfolio/src/Css/Card.css
@@ -8,7 +8,7 @@
   border: solid 2px #64ffda;
   background: #0a192f;
   color: #a8b2d1;
-  box-shadow: 5px 5px 15px rgba(10, 25, 47, 0.7);
+  box-shadow: 5px 5px 15px #0a192fb3;
   text-align: center;
   transition: all 0.4s ease-in-out;
   cursor: pointer;
