made responsive hamburger menu

--- a/bretts-portfolio/src/Css/Skills.css
+++ b/bretts-portfolio/src/Css/Skills.css
@@ -81,7 +81,7 @@ section p {
 }
 
 @media (max-width: 950px) {
-  ul {
+  .skills-list {
     margin-top: 4rem;
     display: flex;
     justify-content: center;
