--- a/bretts-portfolio/src/Css/Navbar.css
+++ b/bretts-portfolio/src/Css/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
   background: #0a192f;
-  width: 99%;
-  height: auto;
+  width: 98vw;
+  height: 100px;
   padding: 20px;
   position: fixed;
-  z-index: 999;
+  z-index: 99;
 }
 
 .navbar-container {
@@ -18,6 +18,10 @@
   height: 7rem;
   transition: all 0.2s;
   border-radius: 30%;
+}
+
+.mobile-nav {
+  display: none;
 }
 
 .navbar-logo:hover {
@@ -55,6 +59,12 @@
   color: #fff;
 }
 
+.hamburger {
+  font-size: 40px;
+  color: #64ffda;
+  cursor: pointer;
+}
+
 .resume-btn {
   letter-spacing: 1px;
   font-family: "Rubik";
@@ -71,29 +81,6 @@
   transition: 0.3s ease-out;
 }
 
-.resume-hamburger-btn {
-  margin-top: 3rem;
-  letter-spacing: 1px;
-  width: 150px;
-  font-family: "Rubik";
-  font-size: 17px;
-  font-weight: 500;
-  padding: 1.2rem 2.4rem;
-  border-radius: 1rem;
-  background-color: #0a192f;
-  border: 1px solid #64ffda;
-  color: #64ffda;
-  cursor: pointer;
-  outline: none;
-  box-shadow: inset 0 0 0 0 #0a192f;
-  transition: 0.3s ease-out;
-}
-
-.resume-hamburger-btn:hover {
-  box-shadow: inset 150px 0 0 #64ffda;
-  color: #0a192f;
-}
-
 .resume-btn:hover {
   box-shadow: inset 150px 0 0 #0a192f;
   color: #64ffda;
@@ -101,9 +88,6 @@
 
 @media (max-width: 950px) {
   .nav-link {
-    text-decoration: none;
-    justify-content: center;
-    display: flex;
     color: #ccd6f6;
     font-weight: 500;
     font-size: 1.75rem;
@@ -112,11 +96,39 @@
 }
 
 @media (max-width: 750px) {
-  .resume-btn {
+  .main-nav {
     display: none;
   }
 
+  .mobile-nav {
+    display: flex;
+    align-items: center;
+  }
+
+  .hamburger {
+    position: absolute;
+    right: 5%;
+  }
+
+  .navbar-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: 100%;
+    background-color: rgba(10, 25, 47, 0.95);
+    border-top: 2px solid #64ffda;
+  }
+
   .nav-list {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+  }
+
+  .resume-btn {
+    margin-bottom: 2rem;
   }
 }
